--- a/Gemma_Embedding.ipynb
+++ b/Gemma_Embedding.ipynb
@@ -37,7 +37,7 @@
         "from google import genai\n",
         "\n",
         "# Initialize the client with your API key\n",
-        "client = genai.Client(api_key=\"AIzaSyCIKUOg4nGQuu-v4Yzvsna8yrvoMd143kQ\")\n",
+        "client = genai.Client(api_key=\"api_key\")\n",
         "\n",
         "# Generate embedding for the input text using the Gemini embedding model\n",
         "result = client.models.embed_content(\n",
